# bowling_kata_cpp

./: CMakeLists.txt
src/: Frame.cpp  Frame.h  FrameBuilder.cpp  FrameBuilder.h  Line.cpp  Line.h  Roll.cpp  Roll.h  Score.cpp  Score.h  SpareRoll.cpp  SpareRoll.h  StrikeRoll.cpp  StrikeRoll.h
test/: BownlingScoreTest.cpp  FrameCreationTest.cpp  TestRunnrer.cpp
